--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Super Showdown",
+  "name": "Compare superheroes using the http://superheroapi.com API!",
   "icons": [
     {
       "src": "favicon.ico",
