--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-backend",
+  "name": "super-showdown",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js",
+    "start": "node app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -13,5 +13,9 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "request": "^2.88.0"
+  },
+  "engines": {
+    "node": "8.9.4",
+    "npm": "5.6.0"
   }
 }
